force-app/main/default/objects/MessagingSession/fields/User_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Contact_Id__c</fullName>
    <label>User Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>