force-app/main/default/objects/MessagingSession/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User_Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>