force-app/main/default/objects/MessagingSession/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <label>UserID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>